@@ -1,4 +1,4 @@
-const char actions_rcs[] = "$Id: actions.c,v 1.47 2008/03/28 15:13:37 fabiankeil Exp $";
+const char actions_rcs[] = "$Id: actions.c,v 1.48 2008/03/28 18:17:14 fabiankeil Exp $";
 /*********************************************************************
  *
  * File        :  $Source: /cvsroot/ijbswa/current/actions.c,v $
@@ -33,6 +33,10 @@ const char actions_rcs[] = "$Id: actions.c,v 1.47 2008/03/28 15:13:37 fabiankeil
  *
  * Revisions   :
  *    $Log: actions.c,v $
+ *    Revision 1.48  2008/03/28 18:17:14  fabiankeil
+ *    In action_used_to_be_valid(), loop through an array of formerly
+ *    valid actions instead of using an OR-chain of strcmpic() calls.
+ *
  *    Revision 1.47  2008/03/28 15:13:37  fabiankeil
  *    Remove inspect-jpegs action.
  *
@@ -657,7 +661,11 @@ static int action_used_to_be_valid(const char *action)
    static const char *formerly_valid_actions[] = {
       "inspect-jpegs",
       "kill-popups",
-      "treat-forbidden-connects-like-blocks"
+      "send-vanilla-wafer",
+      "send-wafer",
+      "treat-forbidden-connects-like-blocks",
+      "vanilla-wafer",
+      "wafer"
    };
    int i;
 
